--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-addons-css-transition-group": "^15.6.2",
+    "react-day-picker": "^7.0.2",
     "react-dom": "^16.0.0",
     "react-select": "^1.0.0"
   }
