add simple redux flow

--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "react-addons-css-transition-group": "^15.6.2",
     "react-day-picker": "^7.0.2",
     "react-dom": "^16.0.0",
-    "react-select": "^1.0.0"
+    "react-redux": "^5.0.6",
+    "react-select": "^1.0.0",
+    "redux": "^3.7.2"
   }
 }
