--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "webpack-dev-server": "^2.9.1"
   },
   "dependencies": {
+    "immutable": "^4.0.0-rc.9",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-addons-css-transition-group": "^15.6.2",
