--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "react-redux": "^5.0.6",
     "react-select": "^1.0.0",
     "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1"
   }
 }
